--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,11 @@ ul {
     list-style: none;
 }
 
+ol {
+    list-style: none;
+}
+
+
 /* -------------------------------------------------------------------
    UTILITIES
 ------------------------------------------------------------------- */
@@ -219,6 +224,26 @@ ul {
     left: 0;
     color: var(--accent-color);
 }
+
+
+.number-list {
+    margin-top: 1.5rem;
+}
+
+.number-list li {
+    position: relative;
+    padding-left: 1.5rem;
+    margin-bottom: 0.75rem;
+    color: var(--text-muted);
+    font-size: 1.05rem;
+}
+
+.number-list li::before {
+    position: absolute;
+    left: 0;
+    color: var(--accent-color);
+}
+
 
 
 a:link, a:visited {
