--- a/styles.css
+++ b/styles.css
@@ -61,14 +61,14 @@ p {
     font-size: 1.05rem;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 ul {
     list-style: none;
 }
-
-ol {
-    list-style: none;
-}
-
 
 /* -------------------------------------------------------------------
    UTILITIES
@@ -200,12 +200,6 @@ ol {
     margin-bottom: 1.5rem;
 }
 
-.content-block a:link, a:visited {
-  color: #0000FF; /* Blue color */
-  text-decoration: underline; /* Ensures the link is underlined */
-}
-
-
 .bullet-list {
     margin-top: 1.5rem;
 }
@@ -224,27 +218,6 @@ ol {
     left: 0;
     color: var(--accent-color);
 }
-
-
-.number-list {
-    margin-top: 1.5rem;
-}
-
-.number-list li {
-    position: relative;
-    padding-left: 1.5rem;
-    margin-bottom: 0.75rem;
-    color: var(--text-muted);
-    font-size: 1.05rem;
-}
-
-.number-list li::before {
-    position: absolute;
-    left: 0;
-    color: var(--accent-color);
-}
-
-
 
 footer {
     padding: 2rem 0;
